Began to add full program running Need to fix resource loading in libraries